--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <section class="comments">
                 <h1>Comments</h1>
                 <div class="text-box">
-                    <textarea rows="4" cols="130" name="comment" form="usrform"></textarea>
+                    <textarea name="comment" form="usrform"></textarea>
                 </div>
                 <div class="submit">
                     <input type="submit">
